package Questao02Pagamento;

public interface Pagamento {
    String processarPagamento(double valor);
}