package Questao02Pagamento;

public abstract class PagamentoFactory {
    public abstract Pagamento criarPagamento();
}